# smartcar-esp32

./: CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.esp32cam
include/: app_config.h
include/app/: app_controller.h  app_events.h
include/net/: stream_server.h
include/services/: camera_service.h  mqtt_service.h  wifi_service.h
src/: CMakeLists.txt  idf_component.yml  main.c
src/app/: app_controller.c
src/net/: stream_server.c
src/services/: camera_service.c  mqtt_service.c  wifi_service.c
